nginx.yml
# Deployment that controls the NGINX pods.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-nginx
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: my-nginx
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80

# Service representing NGINX (port 6080 -> port 80).
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    run: my-nginx # Target the pods created by 'kubectl run my-nginx'
  ports:
  - port: 6080
    targetPort: 80

---

# Ingress for NGINX (public IP / port 80 -> nginx service IP / port 6080)
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-http
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 6080
